--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,36 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: black;
+    background-color: grey;
+}
+
+h1 {
+    text-align: center;
+}
+
+.register {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+}
+
+.register input {
+    padding: 5px;
+}
+
+.register input, label {
+    font-size: 20px;
+}
+
+.register div, button{
+    margin-top: 20px;
+}
+
+.register.button {
+    align-items: center;
 }
